# st10f-programming-tool

./: CMakeLists.txt  ExitCodes.hpp  ExitException.cpp  ExitException.hpp  HelpMessage.txt  LICENCIA  LICENCIA.txt  LICENSE.txt  Logger.cpp  Logger.hpp  Mcu.cpp  Mcu.hpp  McuSpecifics.hpp  README.md  UserConfig.cpp  UserConfig.hpp  main.cpp
McuSt10f168/: CMakeLists.txt  McuSt10f168.cpp  McuSt10f168.hpp
McuSt10f269/: CMakeLists.txt  McuSt10f269.cpp  McuSt10f269.hpp
SerialPort/: CMakeLists.txt  SerialPort.cpp  SerialPort.hpp  SerialPortFactory.cpp  SerialPortFactory.hpp  SerialPortUnix.cpp  SerialPortUnix.hpp  SerialPortWin32.cpp  SerialPortWin32.hpp
firmware/: main.uvmpw  main.uvmpw.uvgui.jan
firmware/ident/: ident.a66  ident.uvgui.jan  ident.uvopt  ident.uvproj
firmware/ident/Objects/: ident.SBR
firmware/include/: COMMON.INC  SHELL.INC  SUBROUTINES.INC
firmware/st10f168/: st10f168.a66  st10f168.uvgui.jan  st10f168.uvopt  st10f168.uvproj
firmware/st10f168/Objects/: st10f168.SBR
firmware/st10f269/: st10f269.a66  st10f269.uvgui.jan  st10f269.uvopt  st10f269.uvproj
firmware/st10f269/Objects/: st10f269.SBR
firmware/stage_1/: stage_1.a66  stage_1.uvgui.jan  stage_1.uvopt  stage_1.uvproj
firmware/stage_1/Objects/: stage_1.SBR
tests/: CMakeLists.txt  erase.cmake  functions.cmake  other_operations.cmake  read.cmake  write.cmake
tests/st10f168/: CMakeLists.txt
tests/st10f168/erase/: ok_b023_erased  ok_b0_erased  ok_b1_erased  ok_b2_erased  ok_b3_erased
tests/st10f168/read/: random
tests/st10f168/write/: 160K  160K_1B  16K  16K_1B  256K_1B  64K  64K_1B  ok_160K  ok_160K_1B  ok_16K  ok_16K_1B  ok_64K  ok_64K_1B  random
tests/st10f269/: CMakeLists.txt
tests/st10f269/erase/: ok_b1246_erased  ok_b1_erased  ok_b2_erased  ok_b3_erased  ok_b4_erased  ok_b5_erased  ok_b6_erased
tests/st10f269/read/: ok_100003B
tests/st10f269/write/: 128K  128K_1B  16K  16K_1B  192K  192K_1B  24K  24K_1B  32K  32K_1B  64K  64K_1B  ok_128K  ok_128K_1B  ok_16K  ok_16K_1B  ok_192K  ok_1B  ok_24K  ok_24K_1B  ok_32K  ok_64K  ok_64K_1B
tests/st10f269/write/mod/backup/: 128K_1B  16K_1B  192K_1B  24K_1B  32K_1B  64K_1B
tests/st10f269/write/mod/ok/: ok_192K_1B  ok_32K_1B
utils/xd/: CMakeLists.txt  xd.c
